<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Doc_Pat_DashBoard" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/namedash"
           android:hint="Name"
           android:textSize="10dp"
           />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameID1"
            android:hint="Name"
            android:layout_below="@id/namedash"
            android:textSize="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameID2"
            android:layout_below="@+id/nameID1"
            android:hint="Name"
            android:textSize="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll1"
            android:layout_below="@+id/nameID2">
        <!--Profile-->
        <Button
            android:id="@+id/home_profile_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:drawableTop="@drawable/profile_img"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:padding="10dp"
            android:text="@string/main_profile" />
        <!--   Medical Doc-->
        <Button
            android:id="@+id/home_medical_doc_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_height="180dp"
            android:background="#fff"
            android:drawableTop="@drawable/ic_first_aid"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:text="@string/main_medical_document" />
        </LinearLayout>
        <!--        Medical History-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll2"
            android:layout_below="@+id/ll1">
        <Button
            android:id="@+id/home_medical_history_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:drawableTop="@drawable/ic_medical_records"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:text="@string/main_history" />
        <!--        LabReports-->
        <Button
            android:id="@+id/home_lab_reports"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#fff"
            android:drawableTop="@drawable/ic_report1"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:padding="10dp"
            android:text="@string/main_report" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll3"
            android:layout_below="@+id/ll2">
        <!--Allergy-->
        <Button
            android:id="@+id/home_allergy_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:background="#fff"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/ic_magnifying_glass"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:text="@string/main_allergy" />
        <!--        vitals-->
        <Button
            android:id="@+id/home_vitals_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_height="180dp"
            android:background="#fff"
            android:drawableTop="@drawable/ic_vitals"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:text="@string/main_vitals" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll4"
            android:layout_below="@+id/ll3">
        <!--        Prescription-->
        <Button
            android:id="@+id/home_prescription_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="180dp"
            android:background="#fff"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/ic_prescription"
            android:gravity="bottom|center|center_horizontal|fill_vertical"
            android:text="@string/main_prescription" />
         <Button
             android:id="@+id/home_medicine_btn"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="180dp"
             android:background="#fff"
             android:padding="10dp"
             android:layout_margin="10dp"
             android:drawableTop="@drawable/ic_vitals"
             android:gravity="bottom|center|center_horizontal|fill_vertical"
             android:text="Add Medicine" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
